--- a/languages/go/books.org
+++ b/languages/go/books.org
@@ -588,6 +588,8 @@ Source: https://github.com/travisjeffery/proglog
   Covers data structures and algorithms for distributed services, abstractly.
 - https://github.com/hashicorp/serf embeded service discovery
 - https://github.com/uber-go/zap logging
+- https://github.com/stretchr/testify/ testing lib
+- https://github.com/travisjeffery/go-dynaport get a random free port
 ** Chapter 1: Let's Go
 - On C, author was bugged by the lack of modules
 - Author's project *Jocko*, and implementation of Kafka in Go
@@ -845,14 +847,14 @@ func (s *grpcServer) ConsumeStream(req *api.ConsumeRequest, stream api.Log_Consu
   * orchestration
 - Serf uses a lightweight *gossip protocol* to communicate between the service nodes.
 - Every instance on the cluster runs a *serf node*
-*** Implementation
+*** Service Discovery
 - go get github.com/hashcorp/serf@v0.8.5
 - m.Config.Tags
   serf shares these tags to the other nodes in the cluster.
   eg: voter or non-voter
 - m.EventCh
   where you receive sefs events when a node joins or leaves the cluster
-- internal/discover/membership.go
+**** internal/discover/membership.go
   #+begin_src go
     package discovery
     import (
@@ -884,35 +886,40 @@ func (s *grpcServer) ConsumeStream(req *api.ConsumeRequest, stream api.Log_Consu
             Tags           map[string]string
             StartJoinAddrs []string
     }
-    func (m *Membership) setupSerf() (err error) {
-            add, err := net.ResolveTCPAddr("tcp", m.BindAddr)
-            if err != nil {
-                    return err
-            }
-            config := serf.DefaultConfig()
-            config.Init()
-            config.MemberlistConfig.BindAddr = addr.IP.String()
-            config.MemberlistConfig.BindPort = addr.Port
-            m.events = make(chan serf.Event)
-            config.EventCh = m.events
-            config.Tags = m.Tags
-            config.NodeName = m.Config.NodeName
-            m.serf, err = serf.Create(config)
-            if err != nil {
-                   return err
-            }
-            go m.eventHandler()
-            if m.StartJoinAddrs != nil {
-                    _, err = m.serf.Join(m.StartJoinAddrs, true)
-                    if err != nil {
-                           return err
-                    }
-                    return nil
-            }
-            return nil
-    }
   #+end_src
-**** Event handler
+**** setupSerf()
+#+begin_src go
+  func (m *Membership) setupSerf() (err error) {
+          add, err := net.ResolveTCPAddr("tcp", m.BindAddr)
+          if err != nil {
+                  return err
+          }
+          config := serf.DefaultConfig()
+          config.Init()
+          config.MemberlistConfig.BindAddr = addr.IP.String()
+          config.MemberlistConfig.BindPort = addr.Port
+          m.events = make(chan serf.Event)
+          config.EventCh = m.events
+          config.Tags = m.Tags
+          config.NodeName = m.Config.NodeName
+          m.serf, err = serf.Create(config)
+          if err != nil {
+                 return err
+          }
+          go m.eventHandler()
+          if m.StartJoinAddrs != nil {
+                  _, err = m.serf.Join(m.StartJoinAddrs, true)
+                  if err != nil {
+                         return err
+                  }
+                  return nil
+          }
+          return nil
+  }
+#+end_src
+**** eventHandler()
+- runs in a loop, reading from the event channel
+- an event can have multiple *members* (like if 2 joins happened in the same time span)
 #+begin_src go
   type Handler interface {
           join(name, addr string) error
@@ -949,7 +956,89 @@ func (s *grpcServer) ConsumeStream(req *api.ConsumeRequest, stream api.Log_Consu
        }
   }
 #+end_src
-* 2021 | Ultimate Go                          | William Kennedy   |
+**** rest
+#+begin_src go
+  func (m *Membership) isLocal(member serf.Member) bool {
+          return m.serf.LocalMember().Name == member.Name
+  }
+  func (m *Membership) Members() []serf.Member {
+          return m.serf.Members()
+  }
+  func (m *Membership) Leave() error {
+          return m.serf.Leave()
+  }
+  func (m *Membership) logError(err error, msg string, member serf.Member) {
+          m.logger.Error(msg, zap.Error(err), zap.String("name", member.Name), zap.String("rpc_addr", member.Tags["rpc_addr"])
+  }
+#+end_src
+**** internal/discover/membership_test.go
+#+begin_src go
+  package discovery_test
+  func TestMembership(t *testing.T) {
+          m, handler := setupMember(t, nil)
+          m, _        = setupMember(t, m)
+          m, _        = setupMember(t, m)
+          require.Eventually(t, func() bool {
+                return 2 == len(handler.joins) &&
+                       3 == len(m[0].Members()) &&
+                       0 == len(handler.leaves)
+          }, 3*time.Second, 250*time.Millisecond)
+          require.NoError(t, m[2].Leave())
+          require.Eventually(t, func() bool {
+                return 2 == len(hanler.joins) &&
+                       3 == len(m[0].Members()) &&
+                       serf.StatusLeft == m[0].Members()[2].Status &&
+                       1 == len(handler.leaves)
+          }, 3*time.Second, 250*time.Millisecond)
+          require.Equal(t, fmt.Sprintf("%d", 2), <-handler.leaves)
+  }
+  func setupMember(t *testing.T, members []*Membership) ([]*Membership, *handler) {
+      id    := len(members)
+      ports := dynaport.Get(1)
+      addr  := fmt.Srpintf("%s:%d", "127.0.0.1", ports[0])
+      tags  := map[string]string{ "rpc_addr": addr }
+      c     := Config{
+                 NodeName: fmt.Srpintf("%d", id),
+                 BindAddr: addr,
+                 Tags:     tags,
+                }
+      h     := &handler{}
+      if len(members) == 0 {
+          h.joins = make(chan map[string]string, 3)
+          h.leaves = make(chan string, 3)
+      } else {
+          c.StartJoinAddrs = []string{ members[0].BindAddr }
+      }
+      m, err := New(h, c)
+      require.NoErro(t, err)
+      memebers = append(members, m)
+      return members, h
+  }
+  type handler struct {
+      joins  chan map[string]string
+      leaves chan string
+  }
+  func (h *handler) Join(id, addr string) error {
+      if h.joins != nil {
+          h.joins <- map[string]string{ "id": id, "addr": addr }
+      }
+      return nil
+  }
+  func (h *handler) Leave(id string) error {
+      if h.leaves != nil {
+          h.leaves <- id
+      }
+      return nil
+  }
+#+end_src
+*** Replication
+- Eventually our replication will have a *leader-follower relationship*
+- Start by replicating when they discover each other
+- Types
+  1) pull-based: the consumer polls the *data source* to check fr new data to consume.
+     great for systems where consumers have different work loads
+  2) push-based: the *data sources* pushes the data to the replica (eg:raft)
+* 2021 | Ultimate Go Notebook                 | William Kennedy   |
 ** Chapter 4: Decoupling
 *** Method receiver, data semantics
 - Pick between value and pointer
@@ -1040,6 +1129,85 @@ func (s *grpcServer) ConsumeStream(req *api.ConsumeRequest, stream api.Log_Consu
     return ErrPageMoved
   }
   #+end_src
+** Chapter 6: Concurrency
+*** 6.11 Channel Patterns
+- for range on a channel is a blocking way to read a channel, shorter syntax for
+  1) a infinite for{}
+  2) a read from a channel with their second return value
+  3) using that return value to /break/ from the for{}
+- if a buffered channel is closed, data would flush out before routines receive close signal
+  when using a for range
+| Pattern Name         | Description                                                                    | C/B     | G | R | k | W | ctx |
+|----------------------+--------------------------------------------------------------------------------+---------+---+---+---+---+-----|
+| Wait 4 result        | spawed goroutine signals (channel) the result to the routine that create it    | 1/      | 1 | 1 | 1 |   |     |
+| Fan Out/in           | Spawn as many goroutines as work to do, uses "Wait for result"                 | 1/n     | n | n | n |   |     |
+| Wait 4 task          | spawns a goroutine before there is work, waiting a work on unbuffered channel  | 1/      | 1 | - | 1 |   |     |
+| Pooling              | for efficienct *resource usage*, spawns a well defined number of goroutines    | 1/      | n | - | m |   |     |
+| Drop                 | drops work on heavy loads, for range goroutine, select with default to drop    | 1/n     | 1 | - | m |   |     |
+| Cancellation         | select{} with timeout, no notification to the goroutine of exit                | 1/1     | 1 | 1 | 1 |   |   1 |
+| Fan Out/In Semaphore | goroutine per work, with a sem buffered channel to limit the nr of active ones | 1/n 1/m | n | n | n |   |     |
+| Bounded Work Pooling | wg adds 1 for each goroutine, which closes once for range{} exits              | 1/g     | g | - | n | g |     |
+| Retry Timeout        | after a failure, i want to retry for a fixed ammount of time, ctx & timer      |         |   |   |   |   |   1 |
+| Channel Cancellation | takes a channel used for cancellation and converts it to a context             |         |   |   |   |   |   1 |
+|----------------------+--------------------------------------------------------------------------------+---------+---+---+---+---+-----|
+**** Retry Timeout
+  #+begin_src go
+    func retryTimeout(ctx context.Context, retryInterval time.Duration,
+                      check func(ctx context.Context) error) {
+        for {
+            fmt.Println("perform usercheck call")
+            if err := check(ctx); err == nil {
+                fmt.Println("work finished successfully")
+                return
+            }
+            fmt.Println("check if timeout has expired")
+            if ctx.Err() != nil {
+                fmt.Println("time expired 1 :", ctx.Err())
+                return
+            }
+            fmt.Printf("wait %s before trying again\n", retryInterval)
+            t := time.NewTimer(retryInterval)
+            select {
+            case <-ctx.Done():
+                fmt.Println("timed expired 2:", ctx.Err())
+                t.Stop()
+                return
+            case <-t.C:
+                fmt.Println("retry again")
+            }
+        }
+    }
+  #+end_src
+**** Channel Cancellation
+#+begin_src go
+  func channelCancellation(stop <-chan struct{}) {
+      ctx, cancel := context.WithCancel(context.Background())
+      defer cancel()
+      go func() {
+          select {
+          case <-stop:
+              cancel()
+          case <-ctx.Done():
+          }
+      }()
+      func(ctx context.Context) error {
+          req, err := http.NewRequestWithContext(
+              ctx,
+              http.MethodGet,
+              "https://www.ardanlabs.com/blog/index.xml",
+              nil,
+          )
+          if err != nil {
+              return err
+          }
+          _, err = http.DefaultClient.Do(req)
+          if err != nil {
+              return err
+          }
+          return nil
+      }(ctx)
+  }
+#+end_src
 * 2022 | Network Programming with Go Language | Dr Jan Newmarch   | Apress
 ** 15 Websockets
  - HTTP 1.1 with "keep alive" keeping the connection open for a short while,
